<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".NewSub5"
    android:background="@drawable/background"
    android:layout_marginBottom="-17dp"
    android:layout_marginLeft="-17dp"
    android:layout_marginRight="-17dp" >

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView"
        android:layout_above="@+id/include"
        android:layout_alignRight="@+id/include"
        android:layout_alignLeft="@+id/include"
        android:layout_alignParentTop="true"
        android:paddingLeft="15dp"
        android:paddingTop="5dp"
        android:paddingRight="15dp"
        android:paddingBottom="15dp">
        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:isScrollContainer="true"
            android:orientation="vertical" >
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/veg1"
                android:id="@+id/checkbox_veg1"
                android:onClick="onCheckboxClicked"
                android:drawableLeft="@drawable/avocado"
                android:drawablePadding="5dp"
                android:paddingLeft="30dp"
                android:paddingBottom="20dp"/>
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/veg2"
                android:id="@+id/checkbox_veg2"
                android:onClick="onCheckboxClicked"
                android:drawableLeft="@drawable/banana"
                android:drawablePadding="5dp"
                android:paddingLeft="30dp"
                android:paddingBottom="20dp"/>
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/veg3"
                android:id="@+id/checkbox_veg3"
                android:onClick="onCheckboxClicked"
                android:drawableLeft="@drawable/cucumber"
                android:drawablePadding="5dp"
                android:paddingLeft="30dp"
                android:paddingBottom="20dp"/>
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/veg4"
                android:id="@+id/checkbox_veg4"
                android:onClick="onCheckboxClicked"
                android:drawableLeft="@drawable/greenpepper"
                android:drawablePadding="5dp"
                android:paddingLeft="30dp"
                android:paddingBottom="20dp"/>
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/veg5"
                android:id="@+id/checkbox_veg5"
                android:onClick="onCheckboxClicked"
                android:drawableLeft="@drawable/jalapeno"
                android:drawablePadding="5dp"
                android:paddingLeft="30dp"
                android:paddingBottom="20dp"/>
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/veg6"
                android:id="@+id/checkbox_veg6"
                android:onClick="onCheckboxClicked"
                android:drawableLeft="@drawable/lettuce"
                android:drawablePadding="5dp"
                android:paddingLeft="30dp"
                android:paddingBottom="20dp"/>
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/veg7"
                android:id="@+id/checkbox_veg7"
                android:onClick="onCheckboxClicked"
                android:drawableLeft="@drawable/onion"
                android:drawablePadding="5dp"
                android:paddingLeft="30dp"
                android:paddingBottom="20dp"/>
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/veg8"
                android:id="@+id/checkbox_veg8"
                android:onClick="onCheckboxClicked"
                android:drawableLeft="@drawable/olives"
                android:drawablePadding="5dp"
                android:paddingLeft="30dp"
                android:paddingBottom="20dp"/>
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/veg9"
                android:id="@+id/checkbox_veg9"
                android:onClick="onCheckboxClicked"
                android:drawableLeft="@drawable/pickles"
                android:drawablePadding="5dp"
                android:paddingLeft="30dp"
                android:paddingBottom="20dp"/>
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/veg10"
                android:id="@+id/checkbox_veg10"
                android:onClick="onCheckboxClicked"
                android:drawableLeft="@drawable/spinach"
                android:drawablePadding="5dp"
                android:paddingLeft="30dp"
                android:paddingBottom="20dp"/>
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/veg11"
                android:id="@+id/checkbox_veg11"
                android:onClick="onCheckboxClicked"
                android:drawableLeft="@drawable/tomato"
                android:drawablePadding="5dp"
                android:paddingLeft="30dp"
                android:paddingBottom="20dp"/>
        </LinearLayout>
    </ScrollView>

    <include android:layout_width="fill_parent" layout="@layout/bottom_bar" android:id="@+id/include"/>

</RelativeLayout>