<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context=".NewSub6"
                android:background="@drawable/background"
                android:layout_marginBottom="-17dp"
                android:layout_marginLeft="-17dp"
                android:layout_marginRight="-17dp" >

    <ScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/scrollView"
            android:layout_above="@+id/include"
            android:layout_alignRight="@+id/include"
            android:layout_alignLeft="@+id/include"
            android:layout_alignParentTop="true"
            android:paddingLeft="15dp"
            android:paddingTop="5dp"
            android:paddingRight="15dp"
            android:paddingBottom="15dp">
        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:isScrollContainer="true"
            android:orientation="vertical" >
            <CheckBox
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/condiments1"
                    android:id="@+id/checkbox_condiments1"
                    android:onClick="onCheckboxClicked"
                    android:drawableLeft="@drawable/bacon"
                    android:drawablePadding="5dp"
                    android:paddingLeft="30dp"
                    android:paddingBottom="20dp"/>
            <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/condiments2"
                    android:id="@+id/checkbox_condiments2"
                    android:onClick="onCheckboxClicked"
                    android:drawableLeft="@drawable/buffalo"
                    android:drawablePadding="5dp"
                    android:paddingLeft="30dp"
                    android:paddingBottom="20dp"/>
            <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/condiments3"
                    android:id="@+id/checkbox_condiments3"
                    android:onClick="onCheckboxClicked"
                    android:drawableLeft="@drawable/southwestern"
                    android:drawablePadding="5dp"
                    android:paddingLeft="30dp"
                    android:paddingBottom="20dp"/>
            <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/condiments4"
                    android:id="@+id/checkbox_condiments4"
                    android:onClick="onCheckboxClicked"
                    android:drawableLeft="@drawable/honeymustard"
                    android:drawablePadding="5dp"
                    android:paddingLeft="30dp"
                    android:paddingBottom="20dp"/>
            <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/condiments5"
                    android:id="@+id/checkbox_condiments5"
                    android:onClick="onCheckboxClicked"
                    android:drawableLeft="@drawable/mayo"
                    android:drawablePadding="5dp"
                    android:paddingLeft="30dp"
                    android:paddingBottom="20dp"/>
            <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/condiments6"
                    android:id="@+id/checkbox_condiments6"
                    android:onClick="onCheckboxClicked"
                    android:drawableLeft="@drawable/mayo"
                    android:drawablePadding="5dp"
                    android:paddingLeft="30dp"
                    android:paddingBottom="20dp"/>
            <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/condiments7"
                    android:id="@+id/checkbox_condiments7"
                    android:onClick="onCheckboxClicked"
                    android:drawableLeft="@drawable/mustard"
                    android:drawablePadding="5dp"
                    android:paddingLeft="30dp"
                    android:paddingBottom="20dp"/>
            <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/condiments8"
                    android:id="@+id/checkbox_condiments8"
                    android:onClick="onCheckboxClicked"
                    android:drawableLeft="@drawable/oil"
                    android:drawablePadding="5dp"
                    android:paddingLeft="30dp"
                    android:paddingBottom="20dp"/>
            <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/condiments9"
                    android:id="@+id/checkbox_condiments9"
                    android:onClick="onCheckboxClicked"
                    android:drawableLeft="@drawable/ranch"
                    android:drawablePadding="5dp"
                    android:paddingLeft="30dp"
                    android:paddingBottom="20dp"/>
            <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/condiments10"
                    android:id="@+id/checkbox_condiments10"
                    android:onClick="onCheckboxClicked"
                    android:drawableLeft="@drawable/vinegar"
                    android:drawablePadding="5dp"
                    android:paddingLeft="30dp"
                    android:paddingBottom="20dp"/>
            <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/condiments11"
                    android:id="@+id/checkbox_condiments11"
                    android:onClick="onCheckboxClicked"
                    android:drawableLeft="@drawable/salt"
                    android:drawablePadding="5dp"
                    android:paddingLeft="30dp"
                    android:paddingBottom="20dp"/>
            <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/condiments12"
                    android:id="@+id/checkbox_condiments12"
                    android:onClick="onCheckboxClicked"
                    android:drawableLeft="@drawable/pepper"
                    android:drawablePadding="5dp"
                    android:paddingLeft="30dp"
                    android:paddingBottom="20dp"/>
        </LinearLayout>
    </ScrollView>

    <include android:layout_width="fill_parent" layout="@layout/bottom_bar" android:id="@+id/include"/>

</RelativeLayout>