<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".NewSub2"
    android:background="@drawable/background"
    android:layout_marginBottom="-17dp"
    android:layout_marginLeft="-17dp"
    android:layout_marginRight="-17dp" >

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView"
        android:layout_alignRight="@+id/include"
        android:layout_alignLeft="@+id/include"
        android:layout_alignParentTop="true"
        android:layout_above="@+id/include"
        android:paddingLeft="15dp"
        android:paddingTop="5dp"
        android:paddingRight="15dp"
        android:paddingBottom="15dp" >
        <RadioGroup
            android:id="@+id/radioBread"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:showDividers="middle" >
            <RadioButton
                android:id="@+id/radioBread1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bread1"
                android:checked="true"
                android:drawableLeft="@drawable/white"
                android:drawablePadding="5dp"
                android:paddingBottom="20dp"
                android:paddingLeft="30dp"/>
            <RadioButton
                android:id="@+id/radioBread2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bread2"
                android:drawableLeft="@drawable/ninegrain"
                android:drawablePadding="5dp"
                android:paddingBottom="20dp"
                android:paddingLeft="30dp"/>
            <RadioButton
                android:id="@+id/radioBread3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bread3"
                android:drawableLeft="@drawable/honeyoat"
                android:drawablePadding="5dp"
                android:paddingBottom="20dp"
                android:paddingLeft="30dp"/>
            <RadioButton
                android:id="@+id/radioBread4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bread4"
                android:drawableLeft="@drawable/montejack"
                android:drawablePadding="5dp"
                android:paddingBottom="20dp"
                android:paddingLeft="30dp"/>
            <RadioButton
                android:id="@+id/radioBread5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bread5"
                android:drawableLeft="@drawable/italherb"
                android:drawablePadding="5dp"
                android:paddingBottom="20dp"
                android:paddingLeft="30dp"/>
            <RadioButton
                android:id="@+id/radioBread6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bread6"
                android:drawableLeft="@drawable/garlic"
                android:drawablePadding="5dp"
                android:paddingBottom="20dp"
                android:paddingLeft="30dp"/>
            <RadioButton
                android:id="@+id/radioBread7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bread7"
                android:drawableLeft="@drawable/wheat"
                android:drawablePadding="5dp"
                android:paddingBottom="20dp"
                android:paddingLeft="30dp"/>
        </RadioGroup>
    </ScrollView>

    <include android:layout_width="fill_parent" layout="@layout/bottom_bar" android:id="@+id/include"/>

</RelativeLayout>
