<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".NewSub4"
    android:background="@drawable/background"
    android:layout_marginBottom="-17dp"
    android:layout_marginLeft="-17dp"
    android:layout_marginRight="-17dp" >

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView"
        android:layout_alignRight="@+id/include"
        android:layout_alignLeft="@+id/include"
        android:layout_alignParentTop="true"
        android:layout_above="@+id/include"
        android:paddingLeft="15dp"
        android:paddingTop="5dp"
        android:paddingRight="15dp"
        android:paddingBottom="15dp">
        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:isScrollContainer="true"
            android:orientation="vertical" >
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/meat1"
                android:id="@+id/checkbox_meat1"
                android:onClick="onCheckboxClicked"
                android:drawableLeft="@drawable/chicken"
                android:drawablePadding="5dp"
                android:paddingLeft="30dp"
                android:paddingBottom="20dp"/>
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/meat2"
                android:id="@+id/checkbox_meat2"
                android:onClick="onCheckboxClicked"
                android:drawableLeft="@drawable/ham"
                android:drawablePadding="5dp"
                android:paddingLeft="30dp"
                android:paddingBottom="20dp"/>
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/meat3"
                android:id="@+id/checkbox_meat3"
                android:onClick="onCheckboxClicked"
                android:drawableLeft="@drawable/coldcuts"
                android:drawablePadding="5dp"
                android:paddingLeft="30dp"
                android:paddingBottom="20dp"/>
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/meat4"
                android:id="@+id/checkbox_meat4"
                android:onClick="onCheckboxClicked"
                android:drawableLeft="@drawable/meatballs"
                android:drawablePadding="5dp"
                android:paddingLeft="30dp"
                android:paddingBottom="20dp"/>
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/meat5"
                android:id="@+id/checkbox_meat5"
                android:onClick="onCheckboxClicked"
                android:drawableLeft="@drawable/beef"
                android:drawablePadding="5dp"
                android:paddingLeft="30dp"
                android:paddingBottom="20dp"/>
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/meat6"
                android:id="@+id/checkbox_meat6"
                android:onClick="onCheckboxClicked"
                android:drawableLeft="@drawable/steak"
                android:drawablePadding="5dp"
                android:paddingLeft="30dp"
                android:paddingBottom="20dp"/>
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/meat7"
                android:id="@+id/checkbox_meat7"
                android:onClick="onCheckboxClicked"
                android:drawableLeft="@drawable/tuna"
                android:drawablePadding="5dp"
                android:paddingLeft="30dp"
                android:paddingBottom="20dp"/>
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/meat8"
                android:id="@+id/checkbox_meat8"
                android:onClick="onCheckboxClicked"
                android:drawableLeft="@drawable/turkey"
                android:drawablePadding="5dp"
                android:paddingLeft="30dp"
                android:paddingBottom="20dp"/>
        </LinearLayout>
    </ScrollView>

    <include android:layout_width="fill_parent" layout="@layout/bottom_bar" android:id="@+id/include"/>

</RelativeLayout>
