<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context=".NewSub1"
        android:background="@drawable/background"
        android:layout_marginBottom="-17dp"
        android:layout_marginLeft="-17dp"
        android:layout_marginRight="-17dp" >

    <ScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/scrollView"
            android:layout_alignRight="@+id/include"
            android:layout_alignLeft="@+id/include"
            android:layout_alignParentTop="true"
            android:layout_above="@+id/include"
            android:paddingLeft="15dp"
            android:paddingTop="5dp"
            android:paddingRight="15dp"
            android:paddingBottom="15dp" >
        <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:isScrollContainer="true"
                android:orientation="vertical" >
            <RadioGroup
                    android:id="@+id/radioSize"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >
                <RadioButton
                        android:id="@+id/radioHalf"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/half"
                        android:checked="true"
                        android:drawableLeft="@drawable/half"
                        android:drawablePadding="20dp"
                        android:paddingLeft="30dp"
                        android:paddingBottom="20dp" />
                <RadioButton
                        android:id="@+id/radioWhole"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/whole"
                        android:drawableLeft="@drawable/whole"
                        android:drawablePadding="20dp"
                        android:paddingLeft="30dp"
                        android:paddingBottom="20dp" />
            </RadioGroup>

            <CheckBox
                    android:id="@+id/checkbox_toasted"
                    android:layout_width="wrap_content"
                    android:layout_height="100dp"
                    android:text="@string/toasted"
                    android:drawablePadding="20dp"
                    android:paddingLeft="30dp" />
        </LinearLayout>
    </ScrollView>

    <include android:layout_width="fill_parent" layout="@layout/bottom_bar" android:id="@+id/include"/>

</RelativeLayout>
