<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context=".NewSub7"
                android:background="@drawable/background"
                android:layout_marginBottom="-17dp"
                android:layout_marginLeft="-17dp"
                android:layout_marginRight="-17dp" >

    <ScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/scrollView"
            android:layout_above="@+id/include"
            android:layout_alignRight="@+id/include"
            android:layout_alignLeft="@+id/include"
            android:layout_alignParentTop="true"
            android:paddingLeft="15dp"
            android:paddingTop="5dp"
            android:paddingRight="15dp"
            android:paddingBottom="15dp">
        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:isScrollContainer="true"
            android:orientation="vertical" >
            <CheckBox
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/extras1"
                    android:id="@+id/checkbox_extras1"
                    android:onClick="onCheckboxClicked"
                    android:drawableLeft="@drawable/chips"
                    android:drawablePadding="5dp"
                    android:paddingLeft="30dp"
                    android:paddingBottom="20dp"/>
            <CheckBox
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/extras2"
                    android:id="@+id/checkbox_extras2"
                    android:onClick="onCheckboxClicked"
                    android:drawableLeft="@drawable/cookie"
                    android:drawablePadding="5dp"
                    android:paddingLeft="30dp"
                    android:paddingBottom="20dp"/>
            <CheckBox
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/extras3"
                    android:id="@+id/checkbox_extras3"
                    android:onClick="onCheckboxClicked"
                    android:drawableLeft="@drawable/drink"
                    android:drawablePadding="5dp"
                    android:paddingLeft="30dp"
                    android:paddingBottom="20dp"/>
        </LinearLayout>
    </ScrollView>

    <include android:layout_width="fill_parent" layout="@layout/bottom_bar" android:id="@+id/include"/>
</RelativeLayout>